[package]
name = "chksum-build"
version = "0.0.3"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Tiny library for setting/getting build-time values for your crate."
readme = "README.md"
repository = "https://github.com/ferric-bytes/chksum-build"
license = "MIT"
keywords = ["build", "build-script"]
categories = ["development-tools::build-utils"]

[profile.release]
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1.0.66", optional = true }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
nom = "7.1.1"
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"

[features]
default = ["info", "script"]
info = []
script = ["anyhow"]
